Delete an update file, change post favorite methods as patch.
